@@ -1,5 +1,4 @@
-package com.luckyseven.notification.config;
-
+package com.luckyseven.funding.config;
 
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
@@ -25,14 +24,15 @@ import java.util.Collections;
 import java.util.List;
 
 @Configuration
+@RequiredArgsConstructor
 @EnableWebSecurity
 public class SecurityConfig {
-    //
+
     @Value("${user-id}")
     private String ID;
     @Value("${user-pwd}")
     private String PWD;
-//    private final JWTUtil jwtUtil;
+
     @Bean
     public BCryptPasswordEncoder bCryptPasswordEncoder() {
 
@@ -56,17 +56,20 @@ public class SecurityConfig {
                                 CorsConfiguration configuration = new CorsConfiguration();
                                 configuration.setAllowedOrigins(
                                         List.of(
-                                                "http://k10c107.p.ssafy.io:8080",
+                                                "http://localhost:5000",
+                                                "https://chuka.kr",
+                                                "http://ec2-43-203-200-59.ap-northeast-2.compute.amazonaws.com:8081",
                                                 "http://ec2-43-203-200-59.ap-northeast-2.compute.amazonaws.com:8082",
                                                 "http://k10c107.p.ssafy.io:8083",
-                                                "http://k10c107.p.ssafy.io:8084"
+                                                "http://k10c107.p.ssafy.io:8085"
                                         )
                                 );
                                 configuration.setAllowedMethods(Collections.singletonList("*"));
                                 configuration.setAllowCredentials(true);
                                 configuration.setAllowedHeaders(Collections.singletonList("*"));
                                 configuration.setMaxAge(3600L);
-                                configuration.setExposedHeaders(List.of("Set-Cookie", "Authorization", "Refresh-Token"));
+                                configuration.setExposedHeaders(Collections.singletonList("Set-Cookie"));
+                                configuration.setExposedHeaders(Collections.singletonList("Authorization"));
 
                                 return configuration;
 
@@ -83,8 +86,9 @@ public class SecurityConfig {
 
         http
                 .authorizeHttpRequests((auth) -> auth
-                        .requestMatchers("/", "/swagger-resources/**", "/v3/api-docs/**", "/api/v1/notifications/**").permitAll()
-                        .requestMatchers("/swagger-ui/**").hasRole("ADMIN")
+                        .requestMatchers("/", "/swagger-resources/**", "/v3/api-docs/**").permitAll()
+                        .requestMatchers("/api/v1/fundings/**").permitAll()
+                        .requestMatchers( "/swagger-ui/**").hasRole("ADMIN")
                         .anyRequest().authenticated());
 
         http
@@ -102,7 +106,6 @@ public class SecurityConfig {
                 .password(bCryptPasswordEncoder().encode(PWD))
                 .roles("ADMIN")
                 .build();
-
 
         return new InMemoryUserDetailsManager(user1);
     }
